<resources>
    <string name="app_name" translatable="false">Mobile Ads API Demos</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="yes" translatable="false">Yes</string>
    <string name="no" translatable="false">No</string>
    <string name="unspecified" translatable="false">Unspecified</string>
    <string name="choose" translatable="false">Choose…</string>

    <string name="ad_attribution" translatable="false">Ad</string>

    <string name="targeting_age_restricted" translatable="false">Age-restricted treatment</string>
    <string name="child" translatable="false">Child</string>
    <string name="teen" translatable="false">Teen</string>
    <string name="targeting_load" translatable="false">Load Targeted Ad</string>
    <string name="targeting_rating" translatable="false">Max ad content rating</string>
    <string name="targeting_rating_g" translatable="false">G</string>
    <string name="targeting_rating_pg" translatable="false">PG</string>
    <string name="targeting_rating_t" translatable="false">T</string>
    <string name="targeting_rating_ma" translatable="false">MA</string>
    <string name="bannersizes_size" translatable="false">Size</string>
    <string name="bannersizes_loadad" translatable="false">Load New Ad</string>
    <string name="load_ad" translatable="true">Load ad</string>
    <string name="show_ad" translatable="true">Show ad</string>

    <string-array name="bannersizes_largesizes" translatable="false">
        <item>Banner</item>
        <item>Large Banner</item>
        <item>Smart Banner</item>
        <item>Full Banner</item>
        <item>Medium Rectangle</item>
        <item>Leaderboard</item>
    </string-array>

    <string-array name="bannersizes_smallsizes" translatable="false">
        <item>Banner</item>
        <item>Large Banner</item>
        <item>Smart Banner</item>
    </string-array>

    <string name="appevents_adunitid" translatable="false">/21775744923/example/api-demo/app-events</string>

    <string name="fluid_adunitid" translatable="false">/21775744923/example/api-demo/fluid</string>
    <string name="fluid_btn_text" translatable="false">Change Ad Width</string>
    <string name="fluid_tv_current_width_text" translatable="false">320 dp</string>
    <string name="fluid_above" translatable="false">(this TextView is above the ad)</string>
    <string name="fluid_below" translatable="false">(this TextView is below the ad)</string>

    <string name="customtargeting_adunitid" translatable="false">/21775744923/example/api-demo/custom-targeting</string>
    <string name="customtargeting_sport" translatable="false">Favorite Sport</string>
    <string name="customtargeting_loadad" translatable="false">Load New Ad</string>
    <string name="customtargeting_key" translatable="false">sportpref</string>

    <string-array name="customtargeting_sports" translatable="false">
        <item>Baseball</item>
        <item>Basketball</item>
        <item>Bobsled</item>
        <item>Football</item>
        <item>Ice Hockey</item>
        <item>Running</item>
        <item>Skiing</item>
        <item>Snowboarding</item>
        <item>Softball</item>
    </string-array>

    <string name="categoryexclusion_adunitid" translatable="false">/21775744923/example/api-demo/category-exclusion</string>
    <string name="categoryexclusion_catscategoryname" translatable="false">apidemo_exclude_cats</string>
    <string name="categoryexclusion_dogscategoryname" translatable="false">apidemo_exclude_dogs</string>
    <string name="categoryexclusion_noexclusions" translatable="false">Banner (no exclusions - cats or dogs)</string>
    <string name="categoryexclusion_catsexcluded" translatable="false">Banner (excluding cats)</string>
    <string name="categoryexclusion_dogsexcluded" translatable="false">Banner (excluding dogs)</string>

    <string name="ppid_adunitid" translatable="false">/21775744923/example/api-demo/ppid</string>
    <string name="ppid_username" translatable="false">Example Username</string>
    <string name="ppid_username_hint" translatable="false">e.g. "user123"</string>
    <string name="ppid_loadad" translatable="false">Load New Ad</string>

    <string name="adsizes_adunitid" translatable="false">/21775744923/example/api-demo/ad-sizes</string>
    <string name="adsizes_size" translatable="false">Available sizes</string>
    <string name="adsizes_loadad" translatable="false">Load New Ad</string>

    <string-array name="fragment_names" translatable="false">
        <item>AdMob - Ad Listener</item>
        <item>AdMob - Ad Targeting</item>
        <item>AdMob - Banner Sizes</item>
        <item>AdMob - Custom Mute This Ad</item>
        <item>AdMob - Ad preloading</item>
        <item>Ad Manager - Fluid Size</item>
        <item>Ad Manager - PPID</item>
        <item>Ad Manager - Custom Targeting</item>
        <item>Ad Manager - Category Exclusions</item>
        <item>Ad Manager - Ad Sizes</item>
        <item>Ad Manager - App Events</item>
        <item>Ad Manager - Custom Video Controls</item>
    </string-array>

    <string name="admob_banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_customevent_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/3325725716</string>

    <string name="custommute_fragment_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="custommute_fragment_mute" translatable="false">Mute Ad</string>
    <string name="custommute_fragment_refresh" translatable="false">Refresh Ad</string>

    <string name="listener_fragment_title" translatable="false">AdMob Ad Listener</string>
    <string name="targeting_fragment_title" translatable="false">AdMob Ad Targeting</string>
    <string name="bannersizes_fragment_title" translatable="false">AdMob Banner Sizes</string>
    <string name="fluid_fragment_title" translatable="false">Ad Manager Fluid Ad Size</string>
    <string name="appevents_fragment_title" translatable="false">Ad Manager App Events</string>
    <string name="categoryexclusion_fragment_title" translatable="false">Ad Manager Category Exclusion</string>
    <string name="customtargeting_fragment_title" translatable="false">Ad Manager Custom Targeting</string>
    <string name="adsizes_fragment_title" translatable="false">Ad Manager Multiple Ad Sizes</string>
    <string name="ppid_fragment_title" translatable="false">Ad Manager PPID</string>

    <string name="customcontrols_fragment_ad_unit_id" translatable="false">/21775744923/example/native-video</string>
    <string name="customcontrols_fragment_template_id" translatable="false">12406343</string>
    <string name="customcontrols_fragment_request_native" translatable="false">Request Native Ads</string>
    <string name="customcontrols_fragment_request_custom_format" translatable="false">Request Custom Native Ad Formats</string>
    <string name="customcontrols_fragment_start_muted" translatable="false">Start video ads muted</string>
    <string name="customcontrols_fragment_request_custom_controls" translatable="false">Request Custom Video Controls</string>
    <string name="customcontrols_fragment_refresh" translatable="false">Refresh Ad</string>

    <string name="customcontrols_view_mute" translatable="false">Mute</string>
    <string name="customcontrols_view_play" translatable="false">Play</string>
    <string name="customcontrols_view_video_status" translatable="false">Video Status: </string>

    <string name="preload_title">Ad Preloading</string>
    <string name="preload_show_ad">Show Ad</string>
    <string name="preload_available"><font color='green'>Available</font></string>
    <string name="preload_exhausted"><font color='red'>Exhausted</font></string>
    <string name="preload_interstitial">Interstitial Ad</string>
    <string name="preload_rewarded">Rewarded Ad</string>
    <string name="preload_app_open">App Open Ad</string>

    <!-- Strings used for in-app browsers -->
    <string name="launch_cct">Launch in Chrome Custom Tab</string>
    <string name="launch_webview">Launch in WebView</string>
</resources>
