<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdManagerCustomControlsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/fl_adplaceholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

        <com.google.android.gms.example.apidemo.CustomControlsView
            android:id="@+id/custom_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.gms.example.apidemo.CustomControlsView>

        <CheckBox
            android:id="@+id/cb_native"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:checked="true"
            android:text="@string/customcontrols_fragment_request_native" />

        <CheckBox
            android:id="@+id/cb_custom_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/customcontrols_fragment_request_custom_format"/>

        <CheckBox
            android:id="@+id/cb_start_muted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/customcontrols_fragment_start_muted" />
        <CheckBox
            android:id="@+id/cb_custom_controls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/customcontrols_fragment_request_custom_controls" />

        <Button
            android:id="@+id/btn_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/customcontrols_fragment_refresh" />

    </LinearLayout>
</ScrollView>
