<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AdManagerFluidSizeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fluid_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/fluid_fragment_title"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/fluid_btn_change_width"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/fluid_btn_text" />

            <TextView
                android:id="@+id/fluid_tv_current_width"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="end"
                android:text="@string/fluid_tv_current_width_text"
                android:textAppearance="@android:style/TextAppearance.Medium" />

        </LinearLayout>

        <TextView
            android:id="@+id/fluid_tv_beforebanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="16dp"
            android:text="@string/fluid_above"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <com.google.android.gms.ads.admanager.AdManagerAdView
            android:id="@+id/fluid_av_main"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            ads:adSize="FLUID"
            ads:adUnitId="@string/fluid_adunitid" />

        <TextView
            android:id="@+id/fluid_tv_afterbanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="16dp"
            android:paddingTop="8dp"
            android:text="@string/fluid_below"
            android:textAppearance="@android:style/TextAppearance.Medium" />


    </LinearLayout>
</ScrollView>
