<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".DFPCustomTargetingFragment">

    <TextView
        android:id="@+id/customtargeting_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/customtargeting_fragment_title"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <LinearLayout
        android:id="@+id/customtargeting_rl_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/customtargeting_tv_title"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/customtargeting_tv_sport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customtargeting_sport"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/customtargeting_spn_sport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/customtargeting_btn_loadad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/customtargeting_loadad" />
    </LinearLayout>

    <com.google.android.gms.ads.doubleclick.PublisherAdView
        android:id="@+id/customtargeting_av_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/customtargeting_adunitid" />

</RelativeLayout>
