<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bannersizes_rl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.google.android.gms.example.apidemo.AdMobBannerSizesFragment">

    <TextView
        android:id="@+id/bannersizes_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/bannersizes_fragment_title"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <LinearLayout
        android:id="@+id/bannersizes_ll_inner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bannersizes_tv_title"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bannersizes_tv_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bannersizes_size"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/bannersizes_spn_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/bannersizes_btn_loadad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/bannersizes_loadad" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/bannersizes_fl_adframe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

</RelativeLayout>
